fix. fikset vedleggs-id og referanse